Fix sizes for social icons on mobile and tablet+.

--- a/app/globals.css
+++ b/app/globals.css
@@ -38,13 +38,8 @@
   .logo {
     @apply font-bold text-m tablet:text-[2rem] tablet:leading-[1] -tracking-[0.33px] tablet:-tracking-[0.44px];
   }
-}
 
-.social-link svg {
-  fill: var(--color-white);
-  transition: fill 0.3s;
-}
-
-.social-link:hover svg {
-  fill: var(--color-secondary);
+  .social-icon {
+    @apply transition-all fill-white hover:fill-secondary;
+  }
 }
